--- a/index.html
+++ b/index.html
@@ -277,28 +277,223 @@
             <ul>
                 <li>
                     <a href="#"><img src="upload/152.png" alt="">
-                        <p>阳光美包新款单肩包女 包时尚子母包四件套女</p>
-                        <p>¥116.00</p>
+                        <div>
+                            <p>阳光美包新款单肩包女 包时尚子母包四件套女</p>
+                            <p class="price">¥116.00</p>
+                        </div>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="upload/153.png" alt=""></a>
+                    <a href="#"><img src="upload/153.png" alt="">
+                        <div>
+                            <p>爱仕达 30CM炒锅不粘锅NWG8330E电磁炉炒</p>
+                            <p class="price">¥99.00</p>
+                        </div>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="upload/154.png" alt=""></a>
+                    <a href="#"><img src="upload/154.png" alt="">
+                        <div>
+                            <p>捷波朗BOOSI颈步</p>
+                            <p class="price">¥245.00</p>
+                        </div>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="upload/156.png" alt=""></a>
+                    <a href="#"><img src="upload/156.png" alt="">
+                        <div>
+                            <p>欧普JYLZ08面板灯平板灯泡</p>
+                            <p class="price">¥238.00</p>
+                        </div>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="upload/158.png" alt=""></a>
+                    <a href="#"><img src="upload/158.png" alt="">
+                        <div>
+                            <p>三星移动手机</p>
+                            <p class="price">¥649.00</p>
+                        </div>
+
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="upload/159.png" alt=""></a>
+                    <a href="#"><img src="upload/159.png" alt="">
+                        <div>
+                            <p>韩国所望紧致滋润精华露400ml</p>
+                            <p class="price">¥649.00</p>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </div>
     </div>
+    <!-- 猜你喜欢模块结束 -->
+    <!-- 楼层区域制作开始 -->
+    <div class="floor">
+        <!-- 1楼家用电器楼层 -->
+        <div class="w jiadian">
+            <div class="box_hd">
+                <h3>家用电器</h3>
+                <div class="tab_list">
+                    <ul>
+                        <li><a href="" class="style_red">热门</a>|</li>
+                        <li><a href="">大家电</a>|</li>
+                        <li><a href="">生活电器</a>|</li>
+                        <li><a href="">厨房电器</a>|</li>
+                        <li><a href="">个护健康</a>|</li>
+                        <li><a href="">应季电器</a>|</li>
+                        <li><a href="">空气/净水</a>|</li>
+                        <li><a href="">新奇特</a>|</li>
+                        <li><a href="">高端电器</a>|</li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="box_bd">
+                <div class="tab_content">
+                    <div class="tab_list_item">
+                        <div class="col_210">
+                            <ul>
+
+                                <li> <a href="#">节能补贴</a></li>
+                                <li> <a href="#">4k电视</a></li>
+                                <li> <a href="#">空气净化器</a></li>
+                                <li> <a href="#">IH电饭煲</a></li>
+                                <li> <a href="#">滚筒洗衣机</a></li>
+                                <li> <a href="#">电热水器</a></li>
+                            </ul>
+                            <a href="#">
+                                <img src="upload/floor-1-1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col_329">
+                            <a href="#"><img src="upload/floor-1-b01.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#" class="bb"><img src="upload/floor-1-2.png" alt=""></a>
+                            <a href="#"><img src="upload/floor-1-3.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#"><img src="upload/floor-1-4.png" alt=""></a>
+                        </div>
+                        <div class="col_219">
+                            <a href="#" class="bb"><img src="upload/floor-1-5.png" alt=""></a>
+                            <a href="#"><img src="upload/floor-1-6.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 2楼手机通讯 -->
+        <div class="w jiadian">
+            <div class="box_hd">
+                <h3>手机通讯</h3>
+                <div class="tab_list">
+                    <ul>
+                        <li><a href="" class="style_red">热门</a>|</li>
+                        <li><a href="">大家电</a>|</li>
+                        <li><a href="">生活电器</a>|</li>
+                        <li><a href="">厨房电器</a>|</li>
+                        <li><a href="">个护健康</a>|</li>
+                        <li><a href="">应季电器</a>|</li>
+                        <li><a href="">空气/净水</a>|</li>
+                        <li><a href="">新奇特</a>|</li>
+                        <li><a href="">高端电器</a>|</li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="box_bd">
+                <div class="tab_content">
+                    <div class="tab_list_item">
+                        <div class="col_210">
+                            <ul>
+
+                                <li> <a href="#">节能补贴</a></li>
+                                <li> <a href="#">4k电视</a></li>
+                                <li> <a href="#">空气净化器</a></li>
+                                <li> <a href="#">IH电饭煲</a></li>
+                                <li> <a href="#">滚筒洗衣机</a></li>
+                                <li> <a href="#">电热水器</a></li>
+                            </ul>
+                            <a href="#">
+                                <img src="upload/floor-1-1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col_329">
+                            <a href="#"><img src="upload/floor-1-b01.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#" class="bb"><img src="upload/floor-1-2.png" alt=""></a>
+                            <a href="#"><img src="upload/floor-1-3.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#"><img src="upload/floor-1-4.png" alt=""></a>
+                        </div>
+                        <div class="col_219">
+                            <a href="#" class="bb"><img src="upload/floor-1-5.png" alt=""></a>
+                            <a href="#"><img src="upload/floor-1-6.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 3楼电脑办公 -->
+        <div class="w jiadian">
+            <div class="box_hd">
+                <h3>电脑办公</h3>
+                <div class="tab_list">
+                    <ul>
+                        <li><a href="" class="style_red">热门</a>|</li>
+                        <li><a href="">大家电</a>|</li>
+                        <li><a href="">生活电器</a>|</li>
+                        <li><a href="">厨房电器</a>|</li>
+                        <li><a href="">个护健康</a>|</li>
+                        <li><a href="">应季电器</a>|</li>
+                        <li><a href="">空气/净水</a>|</li>
+                        <li><a href="">新奇特</a>|</li>
+                        <li><a href="">高端电器</a>|</li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="box_bd">
+                <div class="tab_content">
+                    <div class="tab_list_item">
+                        <div class="col_210">
+                            <ul>
+
+                                <li> <a href="#">节能补贴</a></li>
+                                <li> <a href="#">4k电视</a></li>
+                                <li> <a href="#">空气净化器</a></li>
+                                <li> <a href="#">IH电饭煲</a></li>
+                                <li> <a href="#">滚筒洗衣机</a></li>
+                                <li> <a href="#">电热水器</a></li>
+                            </ul>
+                            <a href="#">
+                                <img src="upload/floor-1-1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col_329">
+                            <a href="#"><img src="upload/floor-1-b01.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#" class="bb"><img src="upload/floor-1-2.png" alt=""></a>
+                            <a href="#"><img src="upload/floor-1-3.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#"><img src="upload/floor-1-4.png" alt=""></a>
+                        </div>
+                        <div class="col_219">
+                            <a href="#" class="bb"><img src="upload/floor-1-5.png" alt=""></a>
+                            <a href="#"><img src="upload/floor-1-6.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 楼层区域制作结束 -->
     <!-- 底部模块制作 -->
     <footer class="footer">
         <div class="w">
