第三次提交

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="f1">
                 <ul>
                     <li>品优购欢迎您！&nbsp;</li>
-                    <li> <a href="#">请登录&nbsp;&nbsp;</a><a href="#" class="style_red">免费注册</a></li>
+                    <li> <a href="#">请登录&nbsp;&nbsp;</a><a href="register.html" class="style_red">免费注册</a></li>
                 </ul>
             </div>
             <div class="f2">
@@ -96,7 +96,7 @@
                 <div class="dd">
                     <ul>
                         <li><a href="#">家用电器</a></li>
-                        <li><a href="#">手机、数码、通信</a></li>
+                        <li><a href="list.html">手机、数码、通信</a></li>
                         <li><a href="#">电脑、办公</a></li>
                         <li><a href="#">家居、家具、家装、厨具</a></li>
                         <li><a href="#">男装、女装、童装、内衣</a></li>
